apps/staging/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  tls:
    - hosts:
        - jelly.heroaero.info
      secretName: jellyfin-tls
  rules:
    - host: jelly.heroaero.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
